brat/test/golden/error/remaining_holes.brat
a(Bit) -o Bit
a(_) = ?a_hole

b(Int) -> List(Int)
b = ?b_hole
